content/boundary/v0.21.x/content/docs/targets/create/tcp/web.mdx
---
layout: docs
page_title: Create a web TCP target
description: >-
  Learn how to create a web TCP target.
---

# Create a web TCP target

TCP targets provide a generic way to connect to any service Boundary has access to, including HTTP and HTTPS services.

The following examples use a direct target address for simplicity, but HashiCorp recommends that you [configure host catalogs and host sets](/boundary/docs/hosts) for scaled production deployments.

Complete the following steps to create a TCP target to connect to a web service. This example assumes an HTTPS service.

<Tabs>
<Tab heading="Admin Console" group="admin">

1. Log in to Boundary.
1. Select an org, and then select the project where you want to create a target.
1. Select **Targets** under *Project Actions*.
1. Click **New Target**.
1. Complete the following fields:
   - **Name**: (Required) A name for identification purposes.
   The name must be unique.
   - **Description**: (Optional) An optional description of the target for identification purposes.
   - **Type**: (Required) Select **TCP** to create a TCP target.
   - **Target Address** (Optional) If you are not using host catalogs and host sets, you can enter a target address instead to map the target to a single address.
   This must be a valid IP address or DNS name.
   - **Default Port** (Required) The default port on which to connect, such as `443`.
   - **Aliases** (Optional) A globally-scoped unique identifier for the target, which makes the target easier to connect to using the CLI or transparent sessions. If you create an alias, click **Add** to assign it.
1. Click **Save**.

</Tab>
<Tab heading="CLI" group="cli">

1. Log in to Boundary.
1. Set the `BOUNDARY_PROJECT_ID` environment variable, or provide the scope ID (such as `p_1234567890`) in the next step.
1. Use the following command to create an SSH target named `postgres-dev-server` with an alias `postgres`, with a direct target address of `10.0.0.5` and a default connection port of `5432`:

   ```shell-session
   $ boundary targets create tcp \
     -scope-id $BOUNDARY_PROJECT_ID \
     -name "test-example-web-server" \
     -with-alias-value "test.example.com" \
     -address "10.0.0.30" \
     -default-port 443
   ```

  You must provide the `scope-id` field when you create a target.

  Refer to the [targets](/boundary/docs/domain-model/targets) domain model documentation for more fields that you can use when you create targets, and the [`targets create`](/boundary/docs/commands/targets/create) command for all the CLI options.

</Tab>
<Tab heading="Terraform" group="terraform">

You can define a target and target alias using the [Boundary Terraform provider](https://registry.terraform.io/providers/hashicorp/boundary/latest):

```hcl
resource "boundary_target" "example" {
  name         = "test-example-web-server"
  description  = "Apache web server for test.example.com"
  type         = "tcp"
  address      = "10.0.0.30"
  default_port = "443"
  scope_id     = boundary_scope.project.id
}

resource "boundary_alias_target" "test.example.com" {
  name                      = "test-example-web-server"
  description               = "Target alias for test-example-web-server"
  scope_id                  = "global"
  value                     = "test.example.com"
  destination_id            = boundary_target.example.id
}
```

</Tab>
</Tabs>

## Configure a brokered application credential

You can configure a brokered application credential for end users to connect to the target. Brokered credentials are exposed to the end user to allow them to authenticate to a target manually, or using [connect helpers](/boundary/docs/targets/connections/connect-helpers).

You can configure credentials for the TCP target using:

- Static credentials (`username_password` or `ssh_private_key`)
- Vault generic credential library

Refer to the [Configure targets with credential brokering](/boundary/docs/credentials/configure-credential-brokering) page to learn how to configure a target with credential brokering.

## Example

The following scenario assumes:

- A web server is deployed in your private network (Nginx, Apache, IIS, etc).
- [A Boundary worker](/boundary/docs/workers) is deployed in your network and registered with the Boundary control plane.
- Your application domain has a registered DNS A-record and is resolvable by authenticated users on your network.
- SSL signed certificates are installed on your web server, and you have distributed the root certificate to clients you want to connect to the web target. Clients should add the cert to their keychain to trust the CA that generated it.
- Your users have been onboarded to Boundary, manually or using an [authentication method](/boundary/tutorials/identity-management) like OIDC or LDAP.
- You have created an org and a project where you want to set up the web target. This example calls the org `dev-projects` and the project `web-infrastructure`. The example may refer to the org by ID (such as `o_c2Ah7bPMj5`) or the project by ID (such as `p_UXVxIgpZ8U`), depending on whether you follow the UI, CLI, or Terraform workflows.

This example also assumes that you want to set up an access model with the following permissions:

- Unauthenticated users cannot access the address range
- Authenticated but unauthorized users cannot view the web target
- Authenticated and authorized users can start sessions to web target

This access model allows users connected to the web target through Boundary to access the address range, but they cannot connect to the target unless you grant a user access to it.

With these prerequisites in place, you can set up the permissions and targets to restrict access to the web target to an authenticated user. This example grants access to a single user, but using a group for authenticated users is more realistic.

### Configure users and grants

To model the different access protocols, you should create an authorized and unauthorized user. These represent users that should and should not have access to the web application hosted on the target.

<Tabs>
<Tab heading="Admin Console" group="admin">

#### Create the unauthorized and authorized users:

1. Log in to Boundary.
1. Make sure you are in the `global` scope. The left sidebar will confirm you are at the **Global Level**.
1. Select **Users** under **Global IAM**.
1. Create an unauthorized user:
  1. Click **New User**.
  1. Complete the following fields:
     - **Name**: (Required) A name for identification purposes.
     The name must be unique. This example calls the user `unauthorized`.
     - **Description**: (Optional) An optional description of the target for identification purposes.
1. Create an authorized user:
  1. Navigate back to the **Users** page. Click **New User**.
  1. Complete the following fields:
     - **Name**: (Required) A name for identification purposes.
     The name must be unique. This example calls the user `authorized`.
     - **Description**: (Optional) An optional description of the target for identification purposes.
     Click **Save**.

#### Assign minimal permissions to the unauthorized user in the `global` scope:

1. Make sure you are in the `global` scope.
1. Click **Roles** in the sidebar. Click **New Role**.
1. Complete the following fields:
   - **Name**: (Required) A name for identification purposes.
   The name must be unique. This example calls the role `unauthorized_global_role`.
   - **Description**: (Optional) An optional description of the target for identification purposes.
   Click **Save**.
1. Select the **Principals** tab for the new role. Click **Add Principals**.
1. Check the box next to the `unauthorized` user in the `global` scope. Click **Add Principals**.
1. Select the **Grants** tab for the role.
1. In the **New Grant** field, enter the grant string: `type=auth-token;ids=*;actions=read:self`, then click **Add**.
1. Add another grant in the **New Grant** field: `type=user;actions=list-resolvable-aliases;ids=*`, then click **Add**.
1. Click **Save**.

There are two grant strings in the example above:

`"type=auth-token;ids=*;actions=read:self"` This grant ensures that the user can authenticate to the Client Agent, if you are using a [transparent sessions workflow](/boundary/docs/targets/connections).
`"type=user;actions=list-resolvable-aliases;ids=*"` This grant ensures that the user can read the aliases in a transparent sessions workflow.

#### Assign read permissions to the authorized user in the `global` scope:

1. Make sure you are in the `global` scope.
1. Click **Roles** in the sidebar. Click **New Role**.
1. Complete the following fields:
   - **Name**: (Required) A name for identification purposes.
   The name must be unique. This example calls the role `authorized_global_role`.
   - **Description**: (Optional) An optional description of the target for identification purposes.
   Click **Save**.
1. Select the **Principals** tab for the new role. Click **Add Principals**.
1. Check the box next to the `authorized` user in the `global` scope. Click **Add Principals**.
1. Select the **Grants** tab for the role.
1. In the **New Grant** field, enter the grant string: `ids=*;type=*;actions=read`, then click **Add**.
1. Add another grant in the **New Grant** field: `type=auth-token;ids=*;actions=read:self`, then click **Add**.
1. Add another grant in the **New Grant** field: `type=user;actions=list-resolvable-aliases;ids=*`, then click **Add**.
1. Click **Save**.

The grant string `"ids=*;type=*;actions=read"` ensures that the user can read all resources in the `global` scope.

#### Assign full access permissions for the authorized user in the org scope:

1. Click on **Back to Global** on the upper-right part of the page.
1. On the **Orgs** page, select the name of your org (such as `dev-projects` or the ID like `o_c2Ah7bPMj5`).
1. Click **Roles** in the sidebar. Click **New Role**.
1. Complete the following fields:
   - **Name**: (Required) A name for identification purposes.
   The name must be unique. This example calls the role `authorized_org_role`.
   - **Description**: (Optional) An optional description of the target for identification purposes.
   Click **Save**.
1. Select the **Principals** tab for the new role. Click **Add Principals**.
1. Check the box next to the `authorized` user in the `global` scope. Click **Add Principals**.
1. Select the **Grants** tab for the role.
1. In the **New Grant** field, enter the grant string: `ids=*;type=*;actions=*`, then click **Add**.
1. Click **Save**.

The grant string `"ids=*;type=*;actions=*"` ensures that the user can perform all actions in the scope.

#### Assign full access permissions for the authorized user in the project scope:

1. Select **Projects** in the left-hand sidebar under *Org Level*.
1. On the **Projects** page, select the name of your project (such as `web-infrastructure` or the ID like `p_UXVxIgpZ8U`).
1. Click **Roles** in the sidebar. Click **New Role**.
1. Complete the following fields:
   - **Name**: (Required) A name for identification purposes.
   The name must be unique. This example calls the role `authorized_project_role`.
   - **Description**: (Optional) An optional description of the target for identification purposes.
   Click **Save**.
1. Select the **Principals** tab for the new role. Click **Add Principals**.
1. Check the box next to the `authorized` user in the `global` scope. Click **Add Principals**.
1. Select the **Grants** tab for the role.
1. In the **New Grant** field, enter the grant string: `ids=*;type=*;actions=*`, then click **Add**.
1. Click **Save**.

</Tab>
<Tab heading="CLI" group="cli">

#### Create the unauthorized and authorized users:

Create an `unauthorized` user and limit its permissions.

1. Log in to Boundary.
1. Set the `BOUNDARY_PROJECT_ID` environment variable, or provide the scope ID (such as `p_1234567890`) in the next step.
1. Create an unauthorized user:

   ```shell-session
   $ boundary users create -scope-id $BOUNDARY_PROJECT_ID -name "unauthorized"

   User information:
     Created Time:        Thu, 15 Jan 2026 19:25:48 MST
     ID:                  u_2pA1bPrvjl
     Name:                unauthorized
     Updated Time:        Thu, 15 Jan 2026 19:25:48 MST
     Version:             1
   
     Scope:
       ID:                o_c2Ah7bPMj5
       Name:
       Parent Scope ID:   global
       Type:              org
   
     Authorized Actions:
       no-op
       read
       update
       delete
       add-accounts
       set-accounts
       remove-accounts
       list-resolvable-aliases
   ```
1. Copy the user id, such as `u_2pA1bPrvjl`.
1. Create a new role for the unauthorized user called `unauthorized_global_role`:

   ```shell-session
   $ boundary roles create -scope-id global -name "unauthorized_global_role"
   
   Role information:
     Created Time:        Thu, 15 Jan 2026 19:22:38 MST
     ID:                  r_jOyos6VIZR
     Name:                unauthorized_global_role
     Updated Time:        Thu, 15 Jan 2026 19:22:38 MST
     Version:             1
   
     Scope:
       ID:                global
       Name:              global
       Type:              global
   
     Authorized Actions:
       add-grant-scopes
       update
       set-grant-scopes
       no-op
       add-principals
       delete
       remove-principals
       remove-grant-scopes
       read
       set-principals
       add-grants
       set-grants
       remove-grants
   
     Grant Scope IDs:
       ID:             this
   ```
1. Copy the role id, such as `r_jOyos6VIZR`.
1. Add grants to the role. Use your own role ID in the command.

   ```shell-session
   $ boundary roles add-grants -id r_jOyos6VIZR -grant "type=auth-token;ids=*;actions=read:self" -grant "type=user;actions=list-resolvable-aliases;ids=*"
   
   Role information:
     Created Time:        Thu, 15 Jan 2026 19:22:38 MST
     ID:                  r_jOyos6VIZR
     Name:                unauthorized
     Updated Time:        Thu, 15 Jan 2026 19:32:51 MST
     Version:             2
   
     Scope:
       ID:                global
       Name:              global
       Type:              global
   
     Authorized Actions:
       remove-grant-scopes
       add-principals
       add-grant-scopes
       update
       delete
       remove-principals
       no-op
       read
       set-principals
       add-grants
       set-grants
       remove-grants
       set-grant-scopes
   
     Canonical Grants:
       ids=*;type=auth-token;actions=read:self
       ids=*;type=user;actions=list-resolvable-aliases
   
     Grant Scope IDs:
       ID:             this
   ```
   There are two grant strings in the example above:
   
   `"type=auth-token;ids=*;actions=read:self"` This grant ensures that the user can authenticate to the Client Agent, if you are using a [transparent sessions workflow](/boundary/docs/targets/connections).
   `"type=user;actions=list-resolvable-aliases;ids=*"` This grant ensures that the user can read the aliases in a transparent sessions workflow.
1. Assign the unauthorized user as a principal to the unauthorized role. Replace the example role ID and user ID with your own. Note that you could also use a group here, instead of assigning a user as the principal.

   ```shell-session
   $ boundary roles add-principals -id r_jOyos6VIZR -principal u_2pA1bPrvjl

   Role information:
     Created Time:        Thu, 15 Jan 2026 19:22:38 MST
     ID:                  r_jOyos6VIZR
     Name:                unauthorized
     Updated Time:        Thu, 15 Jan 2026 19:33:47 MST
     Version:             3
   
     Scope:
       ID:                global
       Name:              global
       Type:              global
   
     Authorized Actions:
       set-principals
       set-grants
       remove-grants
       update
       delete
       remove-principals
       set-grant-scopes
       add-grants
       add-grant-scopes
       remove-grant-scopes
       no-op
       read
       add-principals
   
     Principals:
       ID:             u_2pA1bPrvjl
         Type:         user
         Scope ID:     o_c2Ah7bPMj5
   
     Canonical Grants:
       ids=*;type=auth-token;actions=read:self
       ids=*;type=user;actions=list-resolvable-aliases
   
     Grant Scope IDs:
       ID:             this
   ```

#### Create an authorized user, granting it read access in the `global` scope:

1. Create an authorized user:

   ```shell-session
   $ boundary users create -scope-id $BOUNDARY_PROJECT_ID -name "authorized"

   User information:
     Created Time:        Thu, 15 Jan 2026 19:34:59 MST
     ID:                  u_JogL5yWuKP
     Name:                authorized
     Updated Time:        Thu, 15 Jan 2026 19:34:59 MST
     Version:             1
   
     Scope:
       ID:                o_c2Ah7bPMj5
       Name:
       Parent Scope ID:   global
       Type:              org
   
     Authorized Actions:
       list-resolvable-aliases
       no-op
       read
       update
       delete
       add-accounts
       set-accounts
       remove-accounts
   ```
1. Copy the user id, such as `u_JogL5yWuKP`.
1. Create a new role in the `global` scope for the authorized user:

   ```shell-session
   $ boundary roles create -scope-id global -name "authorized_global_role"
   
   Role information:
     Created Time:        Thu, 15 Jan 2026 19:36:43 MST
     ID:                  r_6MuGPBkg8d
     Name:                authorized_global_role
     Updated Time:        Thu, 15 Jan 2026 19:36:43 MST
     Version:             1
   
     Scope:
       ID:                global
       Name:              global
       Type:              global
   
     Authorized Actions:
       update
       set-principals
       remove-principals
       delete
       set-grants
       remove-grant-scopes
       add-principals
       add-grant-scopes
       set-grant-scopes
       no-op
       read
       add-grants
       remove-grants
   
     Grant Scope IDs:
       ID:             this
   ```
1. Copy the role id, such as `r_6MuGPBkg8d`.
1. Add grants to the role. Use your own role ID in the command.

   ```shell-session
   $ boundary roles add-grants -id r_6MuGPBkg8d -grant "ids=*;type=*;actions=read" -grant "type=auth-token;ids=*;actions=read:self" -grant "type=user;actions=list-resolvable-aliases;ids=*"
   
   Role information:
     Created Time:        Thu, 15 Jan 2026 19:36:43 MST
     ID:                  r_6MuGPBkg8d
     Name:                authorized_global_role
     Updated Time:        Thu, 15 Jan 2026 19:39:43 MST
     Version:             2
   
     Scope:
       ID:                global
       Name:              global
       Type:              global
   
     Authorized Actions:
       delete
       remove-grant-scopes
       read
       add-principals
       set-principals
       add-grants
       set-grants
       add-grant-scopes
       remove-principals
       set-grant-scopes
       no-op
       remove-grants
       update
   
     Canonical Grants:
       ids=*;type=*;actions=read
       ids=*;type=auth-token;actions=read:self
       ids=*;type=user;actions=list-resolvable-aliases
   
     Grant Scope IDs:
       ID:             this
   ```
   The grant string `"ids=*;type=*;actions=read"` ensures that the user can read all resources in the `global` scope.

#### Grant the authorized user full access in the org and project scopes:

Create an `authorized_org_role` and `authorized_project_role` with full access grants.

1. Create a new role called `authorized_org_role` in the `org` scope for the authorized user. Provide your own org ID, such as `o_c2Ah7bPMj5`.

   ```shell-session
   $ boundary roles create -scope-id o_c2Ah7bPMj5 -name "authorized_org_role"
   ```
1. Copy the role id, such as `r_92hVjrgcEN`.
1. Add full access grants to the role. Use your own role ID in the command.

   ```shell-session
   $ boundary roles add-grants -id r_92hVjrgcEN -grant "ids=*;type=*;actions=*"
   ```
   The grant string `"ids=*;type=*;actions=*"` ensures that the user can perform all actions in the scope.
1. Assign the authorized user as a principal to the `authorized_org_role` role. Replace the example role ID and user ID with your own.

   ```shell-session
   $ boundary roles add-principals -id r_92hVjrgcEN -principal u_JogL5yWuKP
   ```
1. Repeat this process to create the `authorized_project_role` with full access grants `"ids=*;type=*;actions=*"` for the authorized user.

</Tab>
<Tab heading="Terraform" group="terraform">

You can define Boundary resources using the [Boundary Terraform provider](https://registry.terraform.io/providers/hashicorp/boundary/latest).

#### Create an unauthorized user:

```hcl
resource "boundary_account_password" "unauthorized_user" {
  auth_method_id = boundary_auth_method.password.id
  login_name     = "unauthorized"
  password       = "unauthorized"
}
```

Assign minimal permissions to the unauthorized user:

```hcl
resource "boundary_role" "unauthorized" {
 description = "Unauthorized user read-auth-token"
 grant_strings = [
   "type=auth-token;ids=*;actions=read:self",
   "type=user;actions=list-resolvable-aliases;ids=*",
 ]
 name          = "unauthorized_global_role"
 principal_ids = [boundary_user.unauthorized_user.id]
 scope_id      = "global"
}
```

There are two grant strings in the example above:

`"type=auth-token;ids=*;actions=read:self"` This grant ensures that the user can authenticate to the Client Agent, if you are using a [transparent sessions workflow](/boundary/docs/targets/connections).
`"type=user;actions=list-resolvable-aliases;ids=*"` This grant ensures that the user can read the aliases in a transparent sessions workflow.

#### Create an authorized user:

```hcl
resource "boundary_account_password" "authorized_user" {
  auth_method_id = boundary_auth_method.password.id
  login_name     = "authorized"
  password       = "authorized"
}
```

Assign read permissions to the authorized user in the `global` scope, and full access permissions in the org and projects scope:

```hcl
resource "boundary_role" "authorized_global_role" {
  name          = "authorized_global_role"
  description   = "Authorized Global Role"
  scope_id      = "global"
  principal_ids = [boundary_user.authorized_user.id]
  grant_strings = [
    "ids=*;type=*;actions=read",
    "type=auth-token;ids=*;actions=read:self",
    "type=user;actions=list-resolvable-aliases;ids=*",
  ]
}

resource "boundary_role" "authorized_org_role" {
  name          = "authorized_org_role"
  description   = "Authorized Org Role"
  scope_id      = boundary_scope.org.id
  principal_ids = [boundary_user.authorized_user.id]
  grant_strings = ["ids=*;type=*;actions=*"]
} 

resource "boundary_role" "authorized_project_role" {
  name          = "authorized_project_role"
  description   = "Authorized Project Role"
  scope_id      = boundary_scope.project.id
  principal_ids = [boundary_user.authorized_user.id]
  grant_strings = ["ids=*;type=*;actions=*"]
}
```

There are two new grant strings in the example above:

`"ids=*;type=*;actions=read"` This grant ensures that the user can read all resources in the assigned scope.
`"ids=*;type=*;actions=*"` This grant ensures that the user can perform all actions in a scope, essentially granting them admin permissions in that scope.

</Tab>
</Tabs>

### Configure the web target

Now that your test users exist, set up the web target. This example assumes the web target's host has a sample web application running on port 443 that the authorized user should have access to when connected through Boundary.

<Tabs>
<Tab heading="Admin Console" group="admin">

Create a TCP target for the web server. This example assumes port 443 for HTTPS.

1. Select **Targets** under **Project Actions**.
1. Click **New Target**.
1. Complete the following fields:
   - **Name**: (Required) A name for identification purposes.
   The name must be unique.
   - **Description**: (Optional) An optional description of the target for identification purposes.
   - **Type**: (Required) Select **TCP** to create a TCP target.
   - **Target Address** (Optional) If you are not using host catalogs and host sets, you can enter a target address instead to map the target to a single address.
   This must be a valid IP address or DNS name.
   - **Default Port** (Required) The default port on which to connect, such as `443`.
   - **Aliases** (Optional) A globally-scoped unique identifier for the target, which makes the target easier to connect to using the CLI or transparent sessions. If you create an alias, click **Add** to assign it.
1. Click **Save**.

</Tab>
<Tab heading="CLI" group="cli">

Create a TCP target for the web server. This example assumes port 443 for HTTPS.

1. Use the following command to create a TCP target named `test-example-web-server` with an alias `test.example.com`, a direct target address of `10.0.0.30` and a default connection port of `443`:

   ```shell-session
   $ boundary targets create tcp \
     -scope-id $BOUNDARY_PROJECT_ID \
     -name "test-example-web-server" \
     -with-alias-value "test.example.com" \
     -address "10.0.0.30" \
     -default-port 443
   ```

  You must provide the `scope-id` field when you create a target.

  Refer to the [targets](/boundary/docs/domain-model/targets) domain model documentation for more fields that you can use when you create targets, and the [`targets create`](/boundary/docs/commands/targets/create) command for all the CLI options.

</Tab>
<Tab heading="Terraform" group="terraform">

Create a TCP target for the web server. This example assumes port 443 for HTTPS.

```hcl
resource "boundary_target" "example" {
  name         = "test-example-web-server"
  description  = "Apache web server for test.example.com"
  type         = "tcp"
  address      = "10.0.0.30"
  default_port = "443"
  scope_id     = boundary_scope.project.id
}
```

You can create an alias if useful for your chosen [connection workflow](/boundary/docs/targets/connections).

```hcl
resource "boundary_alias_target" "test.example.com" {
  name                      = "test-example-web-server"
  description               = "Target alias for test-example-web-server"
  scope_id                  = "global"
  value                     = "test.example.com"
  destination_id            = boundary_target.example.id
}
```

</Tab>
</Tabs>

## Next steps

For an in-depth example of configuring HTTPS web targets, refer to the [Secure remote access to private HTTPS targets with HashiCorp Boundary](https://www.hashicorp.com/en/blog/secure-remote-access-to-private-https-targets-with-hashicorp-boundary) article on HashiCorp's blog.

To learn how to connect to a target, refer to [Connection workflows](/boundary/docs/targets/connections).

To use target aliases to connect to targets:

1. [Create a target alias](/boundary/docs/targets/configuration/create-target-alias)
1. [Connect to a target using an alias](/boundary/docs/targets/connections/connect-target-alias)
1. After you set up a target alias, you can optionally [Configure transparent sessions for end users](/boundary/docs/targets/configuration/configure-transparent-sessions). <sup>HCP/ENT</sup>